Last version that is made for Queue.

--- a/paper/dali.tex
+++ b/paper/dali.tex
@@ -63,6 +63,7 @@
 \newcommand{\push}[1]{\C{push}\;#1}
 \newcommand{\pull}{\C{pull}}
 \newcommand{\semsucceq}{\succeq_{\circ}}
+\newcommand{\sempreceq}{\preceq_{\circ}}
 \newcommand{\under}[2]{#1\,\vdash\,#2}
 
 \makeatletter\if@ACM@journal\makeatother
