--- a/paper/opsem.tex
+++ b/paper/opsem.tex
@@ -65,8 +65,7 @@ P & \coloneqq & E_t \ALT \bullet\,||\,p \ALT p\,||\,\bullet \\
 \RULE
 {
   t\neq t' \spc
-  \under{H}{v \not\succeq v'} \spc
-  \C{mergeable}(H(t),H(t')) \spc
+  \under{H}{v' \mbleto v} \spc
 % \C{world}(H,t') \semsucceq \C{world}(H,t)\spc 
   v_m = \C{merge}(\C{lca}(H(t),H(t')), v, v') \spc
 }
