--- a/paper/dali.tex
+++ b/paper/dali.tex
@@ -65,6 +65,7 @@
 \newcommand{\semsucceq}{\succeq_{\circ}}
 \newcommand{\sempreceq}{\preceq_{\circ}}
 \newcommand{\under}[2]{#1\,\vdash\,#2}
+\newcommand{\mbleto}{\rightsquigarrow_m}
 
 \makeatletter\if@ACM@journal\makeatother
 %% Journal information (used by PACMPL format)
