--- a/paper/semantics.tex
+++ b/paper/semantics.tex
@@ -124,7 +124,7 @@ locus, which leads to the following cases:
 \begin{itemize}
   \item Both $v_0$ and $v_1$ are external ancestors of $v_2$. Hence,
   $\under{H}{v_0 \preceq v_1} \disj \under{H}{v_1 \preceq v_0}$.
-  Since\under{H}{v_0 \preceq v_m} \disj \under{H}{v_1 \preceq v_m}, 
+  Since$\under{H}{v_0 \preceq v_m} \disj \under{H}{v_1 \preceq v_m}$, 
   $v_2$ and $v_m$ have a unique LCA.
 
   \item $v_0$ is an internal ancestor of $v_2$, hence an external
