--- a/paper/dali.tex
+++ b/paper/dali.tex
@@ -67,6 +67,43 @@
 \newcommand{\under}[2]{#1\,\vdash\,#2}
 \newcommand{\mbleto}{\rightsquigarrow_m}
 
+% New colors
+%------------
+\definecolor{Bittersweet}{rgb}{1.0, 0.44, 0.37}
+
+% Listings Code
+%---------------
+\newcommand{\lstml}{
+\lstset{ %
+language=ML, % choose the language of the code
+basicstyle=\small\ttfamily,       % the size of the fonts that are used for the code
+keywordstyle=\color{Bittersweet},
+% numbers=left,                   % where to put the line-numbers
+numberstyle=\tiny,      % the size of the fonts that are used for the line-numbers
+stepnumber=1,                   % the step between two line-numbers. If it is 1 each line will be numbered
+numbersep=5pt,                  % how far the line-numbers are from the code
+showspaces=false,               % show spaces adding particular underscores
+showstringspaces=false,         % underline spaces within strings
+showtabs=false,                 % show tabs within strings adding particular underscores
+% frame=single,                   % adds a frame around the code
+tabsize=2,                      % sets default tabsize to 2 spaces
+captionpos=b,                   % sets the caption-position to bottom
+breaklines=true,                % sets automatic line breaking
+breakatwhitespace=false,        % sets if automatic breaks should only happen at whitespace
+commentstyle=\itshape\color{MidnightBlue},
+%escapeinside={\%*}{*)},         % if you want to add a comment within your code
+morekeywords={module, @@deriving, not, : , /\\}
+}}
+\lstnewenvironment{ocaml}
+    { % \centering
+			\lstml
+      \lstset{}%
+      \csname lst@setfirstlabel\endcsname}
+    { %\centering
+      \csname lst@savefirstlabel\endcsname}
+
+
+
 \makeatletter\if@ACM@journal\makeatother
 %% Journal information (used by PACMPL format)
 %% Supplied to authors by publisher for camera-ready submission
@@ -232,6 +269,8 @@ Text of abstract \ldots.
 
 
 \input{intro}
+
+\input{motivation}
 
 \input{semantics}
 
